rtg_tests/negative/call_argument_type/go.mod
module example.com/rtgtests/negative/call_argument_type

go 1.25
